# TicinoJobsHub

./: .replit  config.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/pypoetry/artifacts/55/f5/77/503fc5c1b86ae3644eeb277fecc0904a3307703a95bb01de2e8b2b335f/: SQLAlchemy-2.0.34-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: .agent_state_247a31dc08a2c5e83f0ce63de5c7cac6aa7c13ba.json  .agent_state_314b0326e29b4d0f08f02006e8136a1497b7fa1a.json  .agent_state_938f44ef5c461970cc2a55b6baf64eed0bb659b8.json  .agent_state_de66c5e9a5adfab44e1dc6238ae2ef5ec7e8b02c.json  .agent_state_e984e6ed4b72cd77f1c858262ae8af71c59eec81.json  .agent_state_main.json  repl_state.json
.upm/: store.json
app/: __init__.py  business_verification.py  forms.py  models.py  routes.py
app/routes/: __init__.py  routes.py
app/static/css/: styles.css
app/static/js/: main.js
instance/: ticino_jobs.db
migrations/versions/: 0a0364d5305d_initial_migration.py  25b91020e528_add_company_details_to_user_model.py  9df4f27d15c4_add_skills_desired_salary_and_preferred_.py  dff4e121dc4f_add_salary_range_and_company_size_to_.py
templates/: base.html  employer_dashboard.html  index.html  job_details.html  job_listing.html  login.html  profile.html  register.html
translations/it/LC_MESSAGES/: messages.po
(+1 files in other folders)
